# icode

./: .gitignore  Cargo.toml  README.md  TASK.md
.github/workflows/: ci.yml  release.yml
skill/: SKILL.md
src/: agent_selector.rs  bot.rs  claim.rs  config.rs  formatter.rs  main.rs
src/executor/: agent.rs  mod.rs  shell.rs
